syntax = "proto3";

package proto;

import "google/protobuf/any.proto";

message ping_request {
}

message add_request {
    string title = 1;
    string description = 2;
    bool status = 3;
    repeated string tags = 4;
}

message get_request {
    repeated string id = 1;
}

message remove_request {
    string id = 1;
    repeated string ids = 2;
}

message update_request {
    string id = 1;
    string title = 2;
    string description = 3;
    bool status = 4;
    repeated string tags = 5;
}

message api_response {
    google.protobuf.Any data = 1;
}

service api {
    rpc ping (ping_request) returns (api_response);
    rpc add (add_request) returns (api_response);
    rpc get (get_request) returns (api_response);
    rpc remove (remove_request) returns (api_response);
    rpc update (update_request) returns (api_response);
}